part2/2_6/manifests/deployment-pingpong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: main-application
  name: dev-kub-pingpong-2-6-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-kub-pingpong-2-6
  template:
    metadata:
      labels:
        app: dev-kub-pingpong-2-6
    spec:
      containers:
        - name: main-app
          image: niklasku/dev_kub_pingpong:2_1_4
