part2/2_6/manifests/service-main.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: main-application
  name: dev-kub-main-app-2-6-svc
spec:
  type: ClusterIP
  selector:
    app: dev-kub-main-app-2-6
  ports:
    - name: main-app
      port: 2345
      protocol: TCP
      targetPort: 3000
