part2/2_6/manifests/service-pingpong.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: main-application
  name: pingpong
spec:
  type: ClusterIP
  selector:
    app: dev-kub-pingpong-2-6
  ports:
    - name: pingpong
      port: 3001
      protocol: TCP
      targetPort: 3001
